# flap

./: .dockerignore  .gitignore  .mrconfig  .ocp-indent  Dockerfile  Makefile  Makefile.config  Makefile.docker  Makefile.generic  Makefile.local  README.md  _tags  docker-run.sh  dune-project  flap.odocl  flap.opam  flap.sh  flap.top  install.sh  run-jvm.sh  run-mips.sh  run.sh
doc/: journal.org  journal.org~
doc/cours-01/: Makefile  marthe.ml  sum.ml
doc/cours-04/: calcul-de-first.org  supprime-recursion-a-gauche.org  supprime-regles-unitaires.org  supprime-regles-vides.org
doc/cours-06/: add.c  closure.c  closureok.c
doc/cours-14/: pair.ml
examples/: arith.hopix  list5.hopix  sum2.hopix
examples/fopix/: ack.fopix  array.fopix  binop1.fopix  binop2.fopix  binop3.fopix  binop4.fopix  binop5.fopix  binopComp.fopix  binopComp1.fopix  binopComp2.fopix  binopComp3.fopix  binopComp4.fopix  defdef.fopix  fact.fopix  factopt.fopix  fun1.fopix  fun2.fopix  fun3.fopix  fun4.fopix  if.fopix  let.fopix  let2.fopix  listmap.fopix  newArray.fopix  treelist.fopix  val1.fopix  (+3 more)
flap/: .gitignore  AUTEURS  Makefile.generic  Makefile.local  README  README.md  configure.sh  distributed_files  download.sh  flap.odocl  flap.sh  flap.top  flapc.sh  install.sh  run.sh  start.sh
flapivor/: .mrconfig  Convert2MacCompliantMakefile.ml  Dockerfile  Makefile  README.md  _tags  flapitest  flapivor.ml  list-projects.sh
lib/: runtime.c  test.c
log/: .gitignore  scores
parsix/: README.md
src/: commandLineOptions.ml  dune  flap.ml  options.ml
tests/: .gitignore  README.md
(+1090 files in other folders)
