opam-version: "2.0"
synopsis: """\
A toy compiler from a functional programming language to MIPS assembly
and Java bytecode"""
maintainer: "Idir Lankri <ilankri@protonmail.com>"
authors: [
  "Yung-Kun Hsieh"
  "Belaid Lagha"
  "Idir Lankri <ilankri@protonmail.com>"
  "Pierre Letouzey"
  "Yann Régis-Gianas"
]
homepage: "https://gitlab.com/ilankri/flap"
bug-reports: "https://gitlab.com/ilankri/flap/-/issues"
depends: [
  "ocaml" {>= "4.08" & < "4.09"}
  "dune" {>= "2.1" & < "3.0"}
  "menhir" {= "20190924"}
  "pprint" {= "20180528"}
]
